ALE-03: fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ button {
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -71,6 +72,7 @@ button:focus-visible {
 form {
   background-color: rgb(255, 255, 255);
 }
+
 .dark form {
   background-color: #1a1a1a;
 }
@@ -82,6 +84,7 @@ form {
 .dark header {
   background-color: #1a1a1a;
 }
+
 .dark header svg {
   color: yellow;
 }
@@ -90,23 +93,26 @@ form {
   background-color: #1a1a1a;
   color: white;
 }
+
 .dark div img {
   filter: opacity(0.8);
 }
+
 .dark div svg {
   filter: invert();
 }
 
-.dark ul{
-  background-color: #1a1a1a;;
-}
-.dark ul li p{
-  color: white;
-}
-.dark ul svg{
-  color: rgb(233 144 28);
+.dark ul {
+  background-color: #1a1a1a;
 }
 
+.dark ul li p {
+  color: white;
+}
+
+.dark ul svg {
+  color: rgb(233 144 28);
+}
 
 .dark .MuiCard-root {
   border: #232994 1px solid;
